<resources>
    <string name="app_name">RadarWeather</string>
    <string name="app_name_long">RadarWeather: weather and radar</string>
    <string name="activity_about">About</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_weather">Weather</string>
    <string name="activity_manage">Manage locations</string>
    <string name="activity_radius_search">Radius Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_rainviewer" translatable="false">Rain Viewer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="next">Next</string>
    <string name="okay">Okay</string>
    <string name="slide1_heading">Welcome!</string>
    <string name="slide1_text">RadarWeather is an App to check the current Weather and Forecasts for your Locations.</string>
    <string name="slide2_heading">How To</string>
    <string name="slide2_text">You can choose your own locations and get detailed information about the current weather. A rain radar is also available.</string>
    <string name="slide3_heading" translatable="false">Github</string>
    <string name="slide3_text">The sourcecode of this app is available at GitHub. For further explanations have a look at the About Page.</string>
    <string name="card_details_heading">Now</string>
    <string name="card_details_humidity">Humidity:</string>
    <string name="card_details_pressure">Pressure:</string>
    <string name="card_details_wind_speed">Wind:</string>
    <string name="card_week_heading">Week</string>
    <string name="card_error_heading">Error fetching weather data</string>
    <string name="card_error_content">Please try to update!</string>
    <string name="radius_search_heading">Find the best weather around a location</string>
    <string name="radius_search_tv_heading">Location (center of the search square)</string>
    <string name="radius_search_tv_edge_length">Edge length of the search square</string>
    <string name="radius_search_tv_num_returns">Number of locations to retrieve</string>
    <string name="radius_search_btn_search">Search</string>
    <string name="radius_search_result_label">Search Result</string>
    <string name="about_privacy_heading">Privacy Info</string>
    <string name="about_permission_internet_description">Connecting to the Network: This permission is needed because weather data is retrieved by making requests to servers on the Internet. Without this permission, no weather data can be received. Optional: authorization for GPS.</string>
    <string name="about">About</string>
    <string name="version_number">Version</string>
    <string name="about_license">License</string>
    <string name="about_license_text">This application is derived from Privacy Friendly Weather, developed by the research group SECUSO. Sourcecode licensed under GPLv3. The app uses icons from Google Material Design Icons licensed under Apache License Version 2.0, the Leaflet library which is licensed under 2-clause BSD License, the Leaflet.TileLayer.ColorFilter plugin which is licensed under MIT License, RainViewer API which is free, Android SQLiteAssetHelper library (com.readystatesoftware.sqliteasset) which is licensed under Apache License Version 2.0, AutoSuggestTextViewAPICall which is licensed under Apache License Version 2.0 and WilliamChart library (com.db.chart) which is licensed under Apache License Version 2.0</string>
    <string name="about_more_info">More information can be found on:</string>
    <string name="about_github" translatable="false"><a href="https://github.com/woheller69/weather">Github-Repo</a></string>
    <string name="activity_settings_title">Settings</string>
    <string name="settings_title_units">Units</string>
    <string name="settings_summary_temperature">Set the unit to use for displaying temperatures</string>
    <string name="settings_title_temperature">Temperatures</string>
    <string name="settings_celsius">Celsius</string>
    <string name="settings_fahrenheit">Fahrenheit</string>
    <string name="settings_summary_distance">Set the unit to use for displaying distances</string>
    <string name="settings_title_distance">Distances</string>
    <string name="settings_kilometers">Kilometers</string>
    <string name="settings_miles">Miles</string>
    <string name="settings_title_API">API Key</string>
    <string name="settings_description_API">RadarWeather receives data from the free service of OpenWeatherMap. This service is limited to 1000 calls per day. Please enter your own API key</string>
    <string name="settings_title_API_key">Enter API Key</string>
    <string name="settings_API_key_default" translatable="false" />
    <string name="abbreviation_monday">Mo.</string>
    <string name="abbreviation_tuesday">Tu.</string>
    <string name="abbreviation_wednesday">We.</string>
    <string name="abbreviation_thursday">Th.</string>
    <string name="abbreviation_friday">Fr.</string>
    <string name="abbreviation_saturday">Sa.</string>
    <string name="abbreviation_sunday">Su.</string>
    <string name="dialog_add_label">Enter the location to add:</string>
    <string name="dialog_add_no_city_found">No location was found that matches your input. It is recommended to select one of the items from the dropdown list.  </string>
    <string name="dialog_add_close_button">Close</string>
    <string name="dialog_add_add_button">Add</string>
    <string name="weather_category_clear_sky">Clear Sky</string>
    <string name="weather_category_few_clouds">Few Clouds</string>
    <string name="weather_category_scattered_clouds">Scattered Clouds</string>
    <string name="weather_category_broken_clouds">Broken Clouds</string>
    <string name="weather_category_overcast_clouds">Overcast Clouds</string>
    <string name="weather_category_drizzle_rain">Drizzle Rain</string>
    <string name="weather_category_light_rain">Light Rain</string>
    <string name="weather_category_moderate_rain">Moderate Rain</string>
    <string name="weather_category_rain">Rain</string>
    <string name="weather_category_thunderstorm">Thunderstorm</string>
    <string name="weather_category_snow">Snow</string>
    <string name="weather_category_mist">Mist</string>
    <string name="weather_category_showerrain">Shower Rain</string>
    <string name="weather_category_showersnow">Shower Snow</string>
    <string name="weather_category_light_snow">Light Snow</string>
    <string name="weather_category_heavy_snow">Heavy Snow</string>
    <string name="weather_category_rainsnow">Rain and Snow</string>
    <string name="error_convert_to_json">The retrieved weather data was not well-formed. </string>
    <string name="error_no_internet">Your Device is not connected to the Internet</string>
    <string name="error_fetch_forecast">Error while updating Forecast, please try again!</string>
    <string name="error_radius_search">Error while doing radius search, please try again!</string>
    <string name="error_no_city_selected">There is no city selected. To select a city go to \"Manage locations\".</string>
    <string name="error_dialog_add_city_too_close">City too close to other watched city</string>
    <string name="error_no_radius_search_result">No city found. Increase search radius</string>
    <string name="settings_interval_quarter">15 min</string>
    <string name="settings_interval_half">30 min</string>
    <string name="settings_interval_one">1 h</string>
    <string name="settings_interval_two">2 h</string>
    <string name="settings_interval_six">6 h</string>
    <string name="settings_interval_twelve">12 h</string>
    <string name="settings_interval_twentyfour">24 h</string>
    <string name="settings_intervals">Intervals</string>
    <string name="settings_update_interval">Update interval</string>
    <string name="settings_interval_summary">Set the interval of automatic updates</string>
    <string name="about_privacy_answer">RadarWeather only uses the permission \"Internet\" to retrieve weather data. It further does not include any tracking mechanisms or advertisement.</string>
    <string name="about_where_from">Where do the weather informations come from?</string>
    <string name="about_where_from_answer">Weather information is fetched from the service OpenWeatherMap. Rain radar data is received from RainViewer. </string>
    <string name="about_permissions">Permissions</string>
    <string name="RainViewer">Rain Radar</string>
    <string name="long_press_text">Hold and drag to sort.</string>
    <string name="swipe_to_delete">Swipe to delete</string>
    <string name="settings_title_display_options">Display options</string>
    <string name="settings_summary_forecastChoice">Select between 5 day / 3h and 2 day / 1h + 3 day / 3h forecasts</string>
    <string name="settings_forecast_option_1">5 day / 3h</string>
    <string name="settings_forecast_option_2">2 day / 1h + 3 day / 3h</string>
    <string name="settings_forecastChoice">Forecast</string>
    <string name="registerOWM">Weather information is fetched from OpenWeatherMap. Please enter your API key in settings. If you do not yet have an API key, please press the button below for free registration.</string>
    <string name="registerOWMbutton">Register for free</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="chart">Chart</string>
    <string name="units_rh">% rh</string>
    <string name="units_mm">mm</string>
    <string name="units_km">km</string>
    <string name="units_hPa">hPa</string>
    <string name="units_Bft">Bft</string>
    <string name="units_mm_h">mm/h</string>
    <string name="units_km_h">km/h</string>
    <string name="units_mph">mph</string>
    <string name="card_details_rain60min">☔ 60 min:</string>
    <string name="error_no_rain60min_data">no data</string>
    <string name="dialog_edit_change_button">Modify</string>
    <string name="dialog_edit_label">CAUTION: This will modify the internal city list!</string>
    <string name="edit_location_hint_search">Search location</string>
    <string name="edit_location_hint_name">Name</string>
    <string name="edit_location_hint_latitude">Latitude</string>
    <string name="edit_location_hint_longitude">Longitude</string>
    <string name="edit_location_hint_country_code">Country Code</string>
    <string name="edit_location_hint_ID" translatable="false">ID</string>
    <string name="edit_location_range_error">Value out of range</string>
    <string name="settings_search_option_1">Internal city list</string>
    <string name="settings_search_option_2" translatable="false">Photon API</string>
    <string name="settings_search_summary">Search locations via Photon API or internal city list</string>
    <string name="settings_search">Search</string>
    <string name="dialog_add_tv">For better search results please activate online search via photon API in settings</string>
    <string name="settings_temp_decimal">Show temperature with one decimal</string>
    <string name="settings_darkmode">Android 10+ Dark Mode</string>
    <string name="settings_position">Position</string>
    <string name="settings_GPS_summary">Allow usage of current GPS position in first TAB and in current weather widget. Position update is triggered automatically by widget.</string>
    <string name="settings_GPS_position">Allow GPS usage</string>
    <string name="error_no_position">No position available</string>
    <string name="settings_time24h">24-hour format</string>
    <string name="summary_time24h">Override system setting</string>
    <string name="settings_wind">Use Beaufort scale</string>
</resources>