<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/radius_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/radius_search_tv_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:text="@string/radius_search_heading"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/radius_search_tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/radius_search_tv_heading" />

            <android.support.v7.widget.AppCompatAutoCompleteTextView
                android:id="@+id/radius_search_edt_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:imeOptions="actionSearch" />

            <TextView
                android:id="@+id/radius_search_tv_edge_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/radius_search_tv_edge_length" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100">

                <SeekBar
                    android:id="@+id/radius_search_sb_edge_length"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="80" />

                <TextView
                    android:id="@+id/radius_search_tv_edge_length_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="20" />

            </LinearLayout>

            <TextView
                android:id="@+id/radius_search_tv_num_returns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/radius_search_tv_num_returns" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100">

                <SeekBar
                    android:id="@+id/radius_search_sb_num_returns"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="80"
                    android:indeterminate="false" />

                <TextView
                    android:id="@+id/radius_search_tv_num_returns_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="20" />
            </LinearLayout>

            <Button
                android:id="@+id/radius_search_btn_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:background="@drawable/button_disabled"
                android:text="@string/radius_search_btn_search"
                android:enabled="false" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>